Changed connection class & split checkout methods

--- a/config/fp_payment_paypal.yml
+++ b/config/fp_payment_paypal.yml
@@ -3,6 +3,8 @@ all:
   page_info_action: index
   page_error_module: fpPaymentPayPal
   page_error_action: error
+#  ipn:
+#    express:
   form_url: 'www.paypal.com'
   form_url_path: '/cgi-bin/webscr?'
   form_fields:
