--- a/config/fp_payment_paypal.yml
+++ b/config/fp_payment_paypal.yml
@@ -3,9 +3,9 @@ all:
   page_info_action: index
   page_error_module: fpPaymentPayPal
   page_error_action: error
-  ipn_default: express
-  ipns:
-    express:
+  ipn_default: adaptive
+  ipn:
+    standard:
       url: 'www.paypal.com'
       url_path: '/cgi-bin/webscr?'
       form_fields:
@@ -28,4 +28,23 @@ all:
         invoice: 0
         #required:
         business: ''
+    express:
+      checkout_url: 'www.paypal.com'
+      checkout_url_path: '/webscr&cmd=_express-checkout&token='
+      url: 'api-3t.paypal.com'
+      url_path: '/'
+      protocol: 'nvp'
+      fields:
+         METHOD: 'SetExpressCheckout' 
+         VERSION: '51.0'
+         USER: ''
+         PWD: ''
+         SIGNATURE: ''
+         errorURL: '@fpPaymentPayPalPlugin_error'
+         returnURL: '@fpPaymentPayPalPlugin_success'
+         cancelURL: '@fpPaymentPayPalPlugin_cancelled'
+         ipnNotificationURL: '@fpPaymentPayPalPlugin_callback'
+         Amt: ''
+         paymentType: 'Authorization' # or 'Sale' or 'Order'
+         CURRENCYCODE: 'USD'
       
