--- a/config/fp_payment_paypal.yml
+++ b/config/fp_payment_paypal.yml
@@ -5,7 +5,7 @@ all:
   page_error_action: error
   ipn_default: adaptive
   ipn:
-    standard:
+    standard: # DONE but did it wrong
       url: 'www.paypal.com'
       url_path: '/cgi-bin/webscr?'
       form_fields:
@@ -28,23 +28,51 @@ all:
         invoice: 0
         #required:
         business: ''
-    express:
+    express: # has not finished
       checkout_url: 'www.paypal.com'
       checkout_url_path: '/webscr&cmd=_express-checkout&token='
       url: 'api-3t.paypal.com'
       url_path: '/'
       protocol: 'nvp'
       fields:
-         METHOD: 'SetExpressCheckout' 
-         VERSION: '51.0'
-         USER: ''
-         PWD: ''
-         SIGNATURE: ''
-         errorURL: '@fpPaymentPayPalPlugin_error'
-         returnURL: '@fpPaymentPayPalPlugin_success'
-         cancelURL: '@fpPaymentPayPalPlugin_cancelled'
-         ipnNotificationURL: '@fpPaymentPayPalPlugin_callback'
-         Amt: ''
-         paymentType: 'Authorization' # or 'Sale' or 'Order'
-         CURRENCYCODE: 'USD'
+        METHOD: 'SetExpressCheckout' 
+        VERSION: '51.0'
+        USER: ''
+        PWD: ''
+        SIGNATURE: ''
+        errorURL: '@fpPaymentPayPalPlugin_error'
+        returnURL: '@fpPaymentPayPalPlugin_success'
+        cancelURL: '@fpPaymentPayPalPlugin_cancelled'
+        ipnNotificationURL: '@fpPaymentPayPalPlugin_callback'
+        Amt: ''
+        paymentType: 'Authorization' # or 'Sale' or 'Order'
+        CURRENCYCODE: 'USD'
+    adaptive: # complete
+      url: 'svcs.paypal.com'
+      url_path: '/AdaptivePayments/Pay'
+      checkout_url: 'www.paypal.com'
+      checkout_url_path: '/webscr?cmd=_ap-payment&paykey='
+      protocol: 'NVP'
+      headers:
+        X-PAYPAL-SECURITY-USERID: '' # required 
+        X-PAYPAL-SECURITY-SIGNATURE: '' # required 
+        X-PAYPAL-SECURITY-PASSWORD: '' # required 
+        X-PAYPAL-APPLICATION-ID: '' # required 
+        X-PAYPAL-REQUEST-DATA-FORMAT: 'NV'
+        X-PAYPAL-RESPONSE-DATA-FORMAT: 'NV'
+        X-PAYPAL-SERVICE-VERSION: '1.7.0'
+      fields:
+        errorUrl: '@fpPaymentPayPalPlugin_error'
+        returnUrl: '@fpPaymentPayPalPlugin_success'
+        cancelUrl: '@fpPaymentPayPalPlugin_cancelled'
+        ipnNotificationUrl: '@fpPaymentPayPalPlugin_callback'
+        requestEnvelope.errorLanguage: 'en_US'
+        currencyCode: 'USD'
+#        feesPayer: '' # SENDER, PRIMARYRECEIVER, EACHRECEIVER, SECONDARYONLY
+        actionType: 'PAY'
+        'receiverList.receiver(0).email': '' # required 
+        'receiverList.receiver(0).amount': '' # required but will added automatically
+#        'receiverList.receiver(0).primary': 'true' # true, false
+      
+       
       
