--- a/config/fp_payment_paypal.yml
+++ b/config/fp_payment_paypal.yml
@@ -38,6 +38,7 @@ all:
       protocol: 'nvp'
       fields:
         METHOD: 'SetExpressCheckout'
+        VERSION: 56.0
         USER: ''
         PWD: ''
         SIGNATURE: ''
@@ -45,6 +46,7 @@ all:
         returnURL: '@fpPaymentPayPalPlugin_success'
         cancelURL: '@fpPaymentPayPalPlugin_cancelled'
         ipnNotificationURL: '@fpPaymentPayPalPlugin_callback'
+        callbackVersion: 56.0
         Amt: ''
         paymentType: 'Authorization' # or 'Sale' or 'Order'
         CURRENCYCODE: 'USD'
